ArticleController avec la classe request

--- a/templates/create-article.html.twig
+++ b/templates/create-article.html.twig
@@ -2,33 +2,45 @@
 
 <section>
 
-	<form method="post">
+	<form method="post" class="article-form">
 
-		<div>
-			<label for="title">Titre
-				<input type="text" placeholder="Entrez le titre de l'article..." name="title" id="title">
-			</label>
+		<div class="form-group">
+			<label for="title">Titre de l'article</label>
+			<input type="text" placeholder="Entrez le titre de l'article..." name="title" id="title">
 		</div>
 
-        <div>
-			<label for="description">Description
-				<input type="text" placeholder="Entrez la description de l'article..." name="description" id="description">
-			</label>
+		<div class="form-group">
+			<label for="description">Description</label>
+			<input type="text" placeholder="Entrez la description de l'article..." name="description" id="description">
 		</div>
 
-        <div>
-			<label for="content">Contenu
-				<textarea name="content" id="content" placeholder="Entrez le contenu de l'article..."></textarea>
-			</label>
+		<div class="form-group">
+			<label for="content">Contenu</label>
+			<textarea name="content" id="content" placeholder="Entrez le contenu de l'article..."></textarea>
 		</div>
 
-        <div>
-			<label for="image">Image(s)
-				<input type="text" placeholder="Entrez l'url d'une image pour l'article (si vous en avez)..." name="image" id="image">
-			</label>
+		<div class="form-group">
+			<label for="image">Image</label>
+			<input type="text" placeholder="Entrez l'URL d'une image (facultatif)..." name="image" id="image">
+		</div>
+
+		<div class="form-group">
+			<button type="submit" name="send_article">Créer l'article</button>
 		</div>
 
 	</form>
+
+</section>
+
+<section>
+
+	<h2>
+		{% for message in app.flashes('success') %}
+			<div class="success-message">
+				{{ message }}
+			</div>
+		{% endfor %}
+	</h2>
 
 </section>
 
