Création du construct dans le fichier Article dans l'Entity et récupération et insertion des données envoyées dans le formulaire jusqu'à la bdd

--- a/templates/create-article.html.twig
+++ b/templates/create-article.html.twig
@@ -1,5 +1,10 @@
-{% include 'partial/_header.html.twig' %}
+{% extends 'base.html.twig' %}
 
+{% block metatitle %}
+    Crée ton article !!!
+{% endblock metatitle %}
+
+{% block main %}
 <section>
 
 	<form method="post" class="article-form">
@@ -44,4 +49,4 @@
 
 </section>
 
-{% include 'partial/_footer.html.twig' %}
+{% endblock main %}
