--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -23,6 +23,18 @@
         <section class="latest-articles">
             <h2>Derniers articles publiés</h2>
             <div class="articles-list">
+                {% for article in articles %}
+					<div class="article-card">
+						{% if article.image %}
+							<img src="{{ article.image }}" alt="{{ article.title }}">
+						{% endif %}
+						<h3>{{ article.title }}</h3>
+						<p><b>{{ article.description }}</b></p>
+						<p>{{ article.content }}</p>
+						<span>Publié le {{ article.createdAt | date('d/m/Y') }}</span>
+					    </p>
+				    </div>
+			    {% endfor %}
                 <p>Aucun article publié pour le moment.</p>
             </div>
         </section>
