--- a/templates/partial/_header.html.twig
+++ b/templates/partial/_header.html.twig
@@ -4,6 +4,7 @@
 		<ul>
 			<li><a href="{{ path('home') }}">Accueil</a></li>
 			<li><a href="{{ path('create-article') }}">Créer un article</a></li>
+			<li><a href="{{ path('list-articles') }}">Liste d'articles de blog</a></li>
 		</ul>
 	</nav>
 
