--- a/templates/show-article.html.twig
+++ b/templates/show-article.html.twig
@@ -1,27 +1,24 @@
 {% extends 'base.html.twig' %}
 
 {% block metatitle %}
-	Tout les articles de blog postés
+	{{ article.title }}
 {% endblock metatitle %}
 
 {% block main %}
 	<main>
 		<section class="latest-articles">
-			<h2>Derniers articles</h2>
+			<h2>{{ article.title }}</h2>
 			<div class="articles-list">
-				{% for article in articles %}
-					<a href="{{ path('show-article', {'id':article.id}) }}">
                     <article class="article-card">
 						{% if article.image %}
 							<img src="{{ article.image }}" alt="{{ article.title }}">
 						{% endif %}
 						<h3>{{ article.title }}</h3>
 						<p><b>{{ article.description }}</b></p>
+						<p>{{ article.content }}</p>
 						<span>Publié le {{ article.createdAt | date('d/m/Y') }}</span>
 					    </p>
 				    </article>
-                    </a>
-			    {% endfor %}
 		    </div>
 	    </section>
     </main>
