--- a/templates/articles-list.html.twig
+++ b/templates/articles-list.html.twig
@@ -7,7 +7,7 @@
 {% block main %}
 	<main>
 		<section class="latest-articles">
-			<h2>Derniers articles</h2>
+			<h2>Articles publiés</h2>
 			<div class="articles-list">
 				{% for article in articles %}
 					<a href="{{ path('show-article', {'id':article.id}) }}">
