--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -24,6 +24,7 @@
             <h2>Derniers articles publiés</h2>
             <div class="articles-list">
                 {% for article in articles %}
+                <a href="{{ path('show-article', {'id':article.id}) }}">
 					<article class="article-card">
 						{% if article.image %}
 							<img src="{{ article.image }}" alt="{{ article.title }}">
@@ -34,6 +35,7 @@
 						<span>Publié le {{ article.createdAt | date('d/m/Y') }}</span>
 					    </p>
 				    </article>
+                </a>
 			    {% endfor %}
                 <p>Aucun article publié pour le moment.</p>
             </div>
