--- a/templates/error404.html.twig
+++ b/templates/error404.html.twig
@@ -6,6 +6,9 @@
 
 {% block main %}
 	<div>
-		<h1>Page non trouvée</h1>
+		<h1>Erreur 404 : Page non trouvée</h1>
+        <a href="{{ path('home') }}">
+            <h2>Retour à l'accueil</h2>
+        </a>
 	</div>
 {% endblock main %}
