--- a/templates/articles-list.html.twig
+++ b/templates/articles-list.html.twig
@@ -6,23 +6,6 @@
 
 {% block main %}
 	<main>
-		<section class="latest-articles">
-			<h2>Articles publiés</h2>
-			<div class="articles-list">
-				{% for article in articles %}
-					<a href="{{ path('show-article', {'id':article.id}) }}">
-                    <article class="article-card">
-						{% if article.image %}
-							<img src="{{ article.image }}" alt="{{ article.title }}">
-						{% endif %}
-						<h3>{{ article.title }}</h3>
-						<p><b>{{ article.description }}</b></p>
-						<span>Publié le {{ article.createdAt | date('d/m/Y') }}</span>
-					    </p>
-				    </article>
-                    </a>
-			    {% endfor %}
-		    </div>
-	    </section>
+		{% include 'partial/_loop-article.html.twig' %}
     </main>
 {% endblock main %}
