--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -20,26 +20,8 @@
             <p>Ce blog est un espace collaboratif où les passionnés de web, de code et de création numérique peuvent publier et consulter des articles.</p>
         </section>
 
-        <section class="latest-articles">
-            <h2>Derniers articles publiés</h2>
-            <div class="articles-list">
-                {% for article in articles %}
-                <a href="{{ path('show-article', {'id':article.id}) }}">
-					<article class="article-card">
-						{% if article.image %}
-							<img src="{{ article.image }}" alt="{{ article.title }}">
-						{% endif %}
-						<h3>{{ article.title }}</h3>
-						<p><b>{{ article.description }}</b></p>
-						<span>Publié le {{ article.createdAt | date('d/m/Y') }}</span>
-					    </p>
-				    </article>
-                </a>
-			    {% endfor %}
-                <p>Aucun article publié pour le moment.</p>
-            </div>
-        </section>
-
+        {% include 'partial/_loop-article.html.twig' %}
+        
     </main>
 
 {% endblock main %}
