--- a/templates/partial/_loop-article.html.twig
+++ b/templates/partial/_loop-article.html.twig
@@ -1,20 +1,25 @@
-<section class="latest-articles">
-	<h2>Derniers articles publiés</h2>
-	<div class="articles-list">
-        {% if not articles %}
-            <p>Il n'y a aucun article publié pour le moment.</p>
-        {% else %}
-            {% for article in articles %}
-                <a href="{{ path('show-article', {'id':article.id}) }}">
-                    <article class="article-card">
-                        {% if article.image %}
-                            <div><img src="{{ article.image }}" alt="{{ article.title }}"></div>
-                        {% endif %}
-                        <h3>{{ article.title }}</h3>
-                        <span>Publié le {{ article.createdAt | date('d/m/Y') }}</span>
-                    </article>
-                </a>
-            {% endfor %}
-        {% endif %}
-	</div>
-</section>
+<div class="articles-list">
+	{% if not articles %}
+		<p>Il n'y a aucun article publié pour le moment.</p>
+	{% else %}
+		{% for article in articles %}
+			<div class="article-wrapper">
+				<a href="{{ path('show-article', {'id': article.id}) }}">
+					<article class="article-card">
+						{% if article.image %}
+							<div><img src="{{ article.image }}" alt="{{ article.title }}"></div>
+						{% endif %}
+						<h3>{{ article.title }}</h3>
+						<span>Publié le
+							{{ article.createdAt | date('d/m/Y') }}</span>
+					</article>
+				</a>
+				<div class="delete-link">
+					<a href="{{ path('delete-article', {'id': article.id}) }}" class="link-delete" onclick="return confirm('Confirmer la suppression de cet article ?')">
+						🗑 Supprimer
+					</a>
+				</div>
+			</div>
+		{% endfor %}
+	{% endif %}
+</div>
