ajout d'un bouton de suppression pour la liste d'articles

--- a/templates/articles-list.html.twig
+++ b/templates/articles-list.html.twig
@@ -9,31 +9,41 @@
 		<section class="latest-articles">
 			<h2>Tout les articles</h2>
 			<div class="articles-list">
-	{% if not articles %}
-		<p>Il n'y a aucun article publié pour le moment.</p>
-	{% else %}
-		{% for article in articles %}
-			<div class="article-wrapper">
-				<a href="{{ path('show-article', {'id': article.id}) }}">
-					<article class="article-card">
-						{% if article.image %}
-							<div><img src="{{ article.image }}" alt="{{ article.title }}"></div>
-						{% endif %}
-						<h3>{{ article.title }}</h3>
-						<span>Publié le
-							{{ article.createdAt | date('d/m/Y') }}</span>
-					</article>
-				</a>
-				<div class="delete-link">
-					<a href="{{ path('delete-article', {'id': article.id}) }}" class="link-delete" onclick="return confirm('Confirmer la suppression de cet article ?')">
-						🗑 Supprimer
-					</a>
-				</div>
+				{% if not articles %}
+					<p>Il n'y a aucun article publié pour le moment.</p>
+				{% else %}
+					{% for article in articles %}
+						<div class="article-wrapper">
+							<a href="{{ path('show-article', {'id': article.id}) }}">
+								<article class="article-card">
+									{% if article.image %}
+										<div><img src="{{ article.image }}" alt="{{ article.title }}"></div>
+									{% endif %}
+									<h3>{{ article.title }}</h3>
+									<span>Publié le
+										{{ article.createdAt | date('d/m/Y') }}</span>
+								</article>
+							</a>
+							<div class="delete-link">
+								<a href="{{ path('delete-article', {'id': article.id}) }}" class="link-delete" onclick="return confirm('Confirmer la suppression de cet article ?')">
+									🗑 Supprimer
+								</a>
+							</div>
+						</div>
+					{% endfor %}
+				{% endif %}
 			</div>
-		{% endfor %}
-	{% endif %}
-</div>
 
+		</section>
+
+		<section>
+			<h2>
+				{% for message in app.flashes('article_deleted') %}
+					<div class="success-message">
+						{{ message }}
+					</div>
+				{% endfor %}
+			</h2>
 		</section>
 	</main>
 {% endblock main %}
