--- a/templates/create-article.html.twig
+++ b/templates/create-article.html.twig
@@ -40,7 +40,7 @@
 <section>
 
 	<h2>
-		{% for message in app.flashes('success') %}
+		{% for message in app.flashes('article_created') %}
 			<div class="success-message">
 				{{ message }}
 			</div>
