--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,14 @@
 
 		{% include 'partial/_header.html.twig' %}
 
-			{% block main %}{% endblock main %}
+		{% block main %}{% endblock main %}
+
+		<section>
+			<h2>
+				{% block flashMessage %}{% endblock flashMessage %}
+			</h2>
+		</section>
+
 
 		{% include 'partial/_footer.html.twig' %}
 	</body>
