--- a/templates/partial/_header.html.twig
+++ b/templates/partial/_header.html.twig
@@ -5,6 +5,7 @@
 			<li><a href="{{ path('home') }}">Accueil</a></li>
 			<li><a href="{{ path('create-article') }}">Créer un article</a></li>
 			<li><a href="{{ path('list-articles') }}">Liste d'articles de blog</a></li>
+			<li><a href="{{ path('category-list') }}">Liste des catégories</a></li>
 		</ul>
 	</nav>
 
