Ajout de css par category

--- a/templates/show-category.html.twig
+++ b/templates/show-category.html.twig
@@ -9,7 +9,7 @@
 		<section class="latest-articles">
 			<h2>{{ category.title }}</h2>
 			<div class="articles-list">
-				{# Donne une classe par couleur donné aux catégories #}
+				{# Donne une classe par la donnée 'color' donné aux catégories dans la bdd #}
 				<article class="article-card {{ category.color }}">
 					<h3>{{ category.title }}</h3>
 					<p>
