Ajout de création de catégorie

--- a/templates/partial/_header.html.twig
+++ b/templates/partial/_header.html.twig
@@ -6,6 +6,7 @@
 			<li><a href="{{ path('create-article') }}">Créer un article</a></li>
 			<li><a href="{{ path('list-articles') }}">Liste d'articles de blog</a></li>
 			<li><a href="{{ path('category-list') }}">Liste des catégories</a></li>
+			<li><a href="{{ path('category-form') }}">Créer une catégorie</a></li>
 		</ul>
 	</nav>
 
