Ajout de la fonction pour supprimer des catégories

--- a/templates/category-list.html.twig
+++ b/templates/category-list.html.twig
@@ -10,17 +10,22 @@
 		<div class="articles-list">
 			{% for category in categories %}
 				<div class="article-wrapper">
-					<a href="{{ path('show-category', {'id':category.id}) }}">
+					<a href="{{ path('show-category', {'id': category.id}) }}">
 						<article class="article-card {{ category.color }}">
 							<h3>{{ category.title }}</h3>
 							<span>Publié le
 								{{ category.createdAt | date('d/m/Y') }}</span>
 						</article>
 					</a>
+
+					<div class="article-actions">
+						<a href="{{ path('update-category', {'id': category.id}) }}" class="link-update">✏️ Modifier</a>
+						<a href="{{ path('delete-category', {'id': category.id}) }}" class="link-delete" onclick="return confirm('Confirmer la suppression de cet article ?')">
+							🗑 Supprimer
+						</a>
+					</div>
 				</div>
-				<div class="update-link">
-					<a href="{{ path('update-category', {'id': category.id}) }}" class="link-update">✏️ Modifier</a>
-				</div>
+
 			{% endfor %}
 		</div>
 
