--- a/templates/articles-list.html.twig
+++ b/templates/articles-list.html.twig
@@ -5,44 +5,44 @@
 {% endblock metatitle %}
 
 {% block main %}
-		<section class="latest-articles, home-page">
-			<h2>Tout les articles</h2>
-			<div class="articles-list">
-				{% if not articles %}
-					<p>Il n'y a aucun article publié pour le moment.</p>
-				{% else %}
-					{% for article in articles %}
-						<div class="article-wrapper">
-							<a href="{{ path('show-article', {'id': article.id}) }}">
-								<article class="article-card">
-									{% if article.image %}
-										<div><img src="{{ article.image }}" alt="{{ article.title }}"></div>
-									{% endif %}
-									<h3>{{ article.title }}</h3>
-									<span>Publié le
-										{{ article.createdAt | date('d/m/Y') }}</span>
-								</article>
+	<section class="latest-articles, home-page">
+		<h2>Tout les articles</h2>
+		<div class="articles-list">
+			{% if not articles %}
+				<p>Il n'y a aucun article publié pour le moment.</p>
+			{% else %}
+				{% for article in articles %}
+					<div class="article-wrapper">
+						<a href="{{ path('show-article', {'id': article.id}) }}">
+							<article class="article-card">
+								{% if article.image %}
+									<div><img src="{{ article.image }}" alt="{{ article.title }}"></div>
+								{% endif %}
+								<h3>{{ article.title }}</h3>
+								<span>Publié le {{ article.createdAt | date('d/m/Y') }}</span>
+								{% if article.category %}
+									<h4>Catégorie : {{ article.category.title }}</h4>
+								{% endif %}
+							</article>
+						</a>
+						<div class="article-actions">
+							<a href="{{ path('update-article', {'id': article.id}) }}" class="link-update">✏️ Modifier</a>
+							<a href="{{ path('delete-article', {'id': article.id}) }}" class="link-delete" onclick="return confirm('Confirmer la suppression de cet article ?')">
+								🗑 Supprimer
 							</a>
-                            <div class="update-link">
-                                <a href="{{ path('update-article', {'id': article.id}) }}" class="link-update">✏️ Modifier</a>
-                            </div>
-							<div class="delete-link">
-								<a href="{{ path('delete-article', {'id': article.id}) }}" class="link-delete" onclick="return confirm('Confirmer la suppression de cet article ?')">
-									🗑 Supprimer
-								</a>
-							</div>
 						</div>
-					{% endfor %}
-				{% endif %}
-			</div>
+					</div>
+				{% endfor %}
+			{% endif %}
+		</div>
 
-		</section>
-	{% endblock main %}
+	</section>
+{% endblock main %}
 
-	{% block flashMessage %}
-		{% for message in app.flashes('article_deleted') %}
-			<div class="success-message">
-				{{ message }}
-			</div>
-		{% endfor %}
-	{% endblock flashMessage %}
+{% block flashMessage %}
+	{% for message in app.flashes('article_deleted') %}
+		<div class="success-message">
+			{{ message }}
+		</div>
+	{% endfor %}
+{% endblock flashMessage %}
