--- a/templates/articles-list.html.twig
+++ b/templates/articles-list.html.twig
@@ -14,7 +14,7 @@
 				{% for article in articles %}
 					<div class="article-wrapper">
 						<a href="{{ path('show-article', {'id': article.id}) }}">
-							<article class="article-card">
+							<article class="article-card {% if article.category %}{{ article.category.color }}{% endif %}">
 								{% if article.image %}
 									<div><img src="{{ article.image }}" alt="{{ article.title }}"></div>
 								{% endif %}
